gke_ingress_lb/gke_ingress_lb_backend_config/envoy_proxy/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: fe-envoy
        image: envoyproxy/envoy:v1.14.3
        imagePullPolicy: IfNotPresent
        ports:
        - name: fe
          containerPort: 8080
          protocol: TCP
        - name: svc
          containerPort: 50051
          protocol: TCP                            
        command: ["/usr/local/bin/envoy"]
        args: ["-c", "/data/config/envoy.yaml"]
        volumeMounts:
        - name: hc-certs-volume
          mountPath: /http_certs
        - name: grpc-certs-volume
          mountPath: /grpc_certs          
        - name: envoy-config-volume
          mountPath: /data/config                  
      - name: fe-container
        image: salrashid123/grpc_only_backend
        imagePullPolicy: IfNotPresent           
        command: ["/grpc_server"]
        args: ["--grpcport", ":50052", "--insecure"]
      volumes:
        - name: grpc-certs-volume
          secret:
            secretName: grpc-secret
        - name: hc-certs-volume
          secret:
            secretName: hc-secret            
        - name: envoy-config-volume
          configMap:
             name: envoy-configmap
             items:
              - key: config
                path: envoy.yaml
